unpackaged/main/default/objects/conference360__Event_Keyword__c/fields/conference360__Keyword__c.field-meta.xml
<CustomField>
    <fullName>conference360__Keyword__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Keyword</label>
    <referenceTo>conference360__Keyword__c</referenceTo>
    <relationshipLabel>Event Keywords</relationshipLabel>
    <relationshipName>Event_Keywords</relationshipName>
    <type>Lookup</type>
</CustomField>