unpackaged/main/default/objects/conference360__Event_Keyword__c/fields/conference360__Last_Publish_To_Platform_Completed_At__c.field-meta.xml
<CustomField>
    <fullName>conference360__Last_Publish_To_Platform_Completed_At__c</fullName>
    <inlineHelpText>The date/time the changes to this record were made visible to Attendees (Live).</inlineHelpText>
    <label>Last Publish To Platform Completed At</label>
    <type>DateTime</type>
</CustomField>